test/compile-errors/wrong-number-type-args.crow
magic<out, in> out?(a opt in)
	todo

use-it<out, in> out?(a opt in)
	a magic<out>
